--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -839,10 +839,6 @@ video {
   margin-top: auto;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .block {
   display: block;
 }
@@ -934,10 +930,6 @@ video {
   height: 100vh;
 }
 
-.h-\[70vh\] {
-  height: 70vh;
-}
-
 .max-h-80 {
   max-height: 20rem;
 }
@@ -954,24 +946,12 @@ video {
   max-height: 90%;
 }
 
+.max-h-\[calc\(100vh-60px\)\] {
+  max-height: calc(100vh - 60px);
+}
+
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
-}
-
-.max-h-48 {
-  max-height: 12rem;
-}
-
-.max-h-64 {
-  max-height: 16rem;
-}
-
-.max-h-\[calc\(100\%-80px\)\] {
-  max-height: calc(100% - 80px);
-}
-
-.max-h-full {
-  max-height: 100%;
 }
 
 .\!w-11\/12 {
@@ -1070,6 +1050,10 @@ video {
   width: 30%;
 }
 
+.w-\[35\%\] {
+  width: 35%;
+}
+
 .w-\[5\%\] {
   width: 5%;
 }
@@ -1119,8 +1103,8 @@ video {
   width: 100vw;
 }
 
-.w-20 {
-  width: 5rem;
+.w-\[64\%\] {
+  width: 64%;
 }
 
 .min-w-0 {
@@ -1153,14 +1137,6 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.max-w-sm {
-  max-width: 24rem;
 }
 
 .flex-1 {
@@ -1372,24 +1348,6 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
 .\!place-self-center {
   place-self: center !important;
 }
@@ -1520,10 +1478,6 @@ video {
   border-top-width: 8px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
@@ -1578,8 +1532,19 @@ video {
   border-color: rgb(139 145 151 / 0.8);
 }
 
-.border-vlp\/30 {
-  border-color: rgb(255 255 255 / 0.3);
+.border-neutral-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-border-opacity, 1));
+}
+
+.border-neutral-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
+}
+
+.border-vls {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
 }
 
 .border-e-transparent {
@@ -1675,9 +1640,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-700 {
+.bg-vls {
   --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
+  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -3964,10 +3929,6 @@ input[type='radio']:checked {
   color: rgb(139 145 151 / var(--tw-text-opacity, 1));
 }
 
-.last\:border-b-0:last-child {
-  border-bottom-width: 0px;
-}
-
 .hover\:border-vla:hover {
   --tw-border-opacity: 1;
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
@@ -3976,6 +3937,34 @@ input[type='radio']:checked {
 .hover\:border-vred-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-vls:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-vlp3:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(211 213 214 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-vlp2:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(232 233 235 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-vlp2\/20:hover {
+  border-color: rgb(232 233 235 / 0.2);
+}
+
+.hover\:border-vls2:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-vls\/80:hover {
+  border-color: rgb(139 145 151 / 0.8);
 }
 
 .hover\:bg-gray-300:hover {
@@ -4028,14 +4017,14 @@ input[type='radio']:checked {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-red-800:hover {
+.hover\:bg-vls:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
+  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-vla:hover {
+.hover\:bg-vlp2:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
@@ -4077,11 +4066,6 @@ input[type='radio']:checked {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -4116,6 +4100,10 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.focus\:border-vls\/80:focus {
+  border-color: rgb(139 145 151 / 0.8);
+}
+
 .focus\:bg-slate-400:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
@@ -4129,6 +4117,11 @@ input[type='radio']:checked {
 .focus\:bg-vlp:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.focus\:bg-vlp2:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
 .focus\:text-gray-200:focus {
@@ -4156,6 +4149,12 @@ input[type='radio']:checked {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.focus\:ring:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .focus\:ring-red-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity, 1));
@@ -4176,9 +4175,18 @@ input[type='radio']:checked {
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
 }
 
+.active\:border-vls\/80:active {
+  border-color: rgb(139 145 151 / 0.8);
+}
+
 .active\:bg-slate-500:active {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
+}
+
+.active\:bg-vlp2:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:\!border:is(.dark *) {
@@ -4247,6 +4255,11 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-neutral-800:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(38 38 38 / var(--tw-border-opacity, 1));
+}
+
 .dark\:border-t-vds2:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
@@ -4307,9 +4320,19 @@ input[type='radio']:checked {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-sky-600:is(.dark *) {
+.dark\:bg-neutral-800:is(.dark *) {
   --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity, 1));
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vds3light:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vdp3:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:text-gray-100:is(.dark *) {
@@ -4369,10 +4392,6 @@ input[type='radio']:checked {
   text-decoration-color: #FEA09A;
 }
 
-.dark\:decoration-vred-300:is(.dark *) {
-  text-decoration-color: #FEA09A;
-}
-
 .dark\:placeholder-neutral-300:is(.dark *)::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(212 212 212 / var(--tw-placeholder-opacity, 1));
@@ -4417,6 +4436,14 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:hover\:border-vls\/40:hover:is(.dark *) {
+  border-color: rgb(139 145 151 / 0.4);
+}
+
+.dark\:hover\:border-vls\/80:hover:is(.dark *) {
+  border-color: rgb(139 145 151 / 0.8);
+}
+
 .dark\:hover\:bg-neutral-500:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(115 115 115 / var(--tw-bg-opacity, 1));
@@ -4430,11 +4457,6 @@ input[type='radio']:checked {
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-sky-700:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 105 161 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:fill-vred-300:hover:is(.dark *) {
@@ -4501,6 +4523,10 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:focus\:border-vls\/80:focus:is(.dark *) {
+  border-color: rgb(139 145 151 / 0.8);
+}
+
 .dark\:focus\:bg-vlp:focus:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -4523,6 +4549,10 @@ input[type='radio']:checked {
 .dark\:active\:border-vred-300:active:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+}
+
+.dark\:active\:border-vls\/80:active:is(.dark *) {
+  border-color: rgb(139 145 151 / 0.8);
 }
 
 @media (min-width: 640px) {
