--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -554,6 +554,40 @@ video {
   display: none;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -689,6 +723,10 @@ video {
 
 .z-\[99\] {
   z-index: 99;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .m-1 {
@@ -1105,6 +1143,10 @@ video {
 
 .w-\[64\%\] {
   width: 64%;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .min-w-0 {
@@ -1643,6 +1685,11 @@ video {
 .bg-vls {
   --tw-bg-opacity: 1;
   background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -4025,6 +4072,16 @@ input[type='radio']:checked {
 .hover\:bg-vlp2:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-red-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-vls3:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
