--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -633,12 +633,24 @@ video {
   bottom: 0px;
 }
 
+.\!-right-2 {
+  right: -0.5rem !important;
+}
+
 .\!-right-3 {
   right: -0.75rem !important;
 }
 
+.\!-top-2 {
+  top: -0.5rem !important;
+}
+
 .\!-top-3 {
   top: -0.75rem !important;
+}
+
+.-top-0\.5 {
+  top: -0.125rem;
 }
 
 .bottom-0 {
@@ -661,8 +673,16 @@ video {
   right: 0px;
 }
 
+.right-1 {
+  right: 0.25rem;
+}
+
 .right-2 {
   right: 0.5rem;
+}
+
+.right-3 {
+  right: 0.75rem;
 }
 
 .right-4 {
@@ -677,6 +697,10 @@ video {
   top: 0px;
 }
 
+.top-1 {
+  top: 0.25rem;
+}
+
 .top-1\/2 {
   top: 50%;
 }
@@ -687,46 +711,6 @@ video {
 
 .top-1\/4 {
   top: 25%;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.\!-right-4 {
-  right: -1rem !important;
-}
-
-.\!-top-40 {
-  top: -10rem !important;
-}
-
-.\!-top-4 {
-  top: -1rem !important;
-}
-
-.\!-right-2 {
-  right: -0.5rem !important;
-}
-
-.\!-top-2 {
-  top: -0.5rem !important;
-}
-
-.bottom-0\.5 {
-  bottom: 0.125rem;
-}
-
-.right-0\.5 {
-  right: 0.125rem;
-}
-
-.left-0\.5 {
-  left: 0.125rem;
-}
-
-.top-2 {
-  top: 0.5rem;
 }
 
 .-z-50 {
@@ -911,10 +895,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -994,12 +974,12 @@ video {
   height: 2.5rem;
 }
 
-.h-4 {
-  height: 1rem;
+.h-28 {
+  height: 7rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-4 {
+  height: 1rem;
 }
 
 .h-6 {
@@ -1034,8 +1014,8 @@ video {
   height: 100vh;
 }
 
-.h-28 {
-  height: 7rem;
+.max-h-40 {
+  max-height: 10rem;
 }
 
 .max-h-80 {
@@ -1062,16 +1042,16 @@ video {
   max-height: 40vh;
 }
 
+.max-h-\[50vh\] {
+  max-height: 50vh;
+}
+
 .max-h-\[90\%\] {
   max-height: 90%;
 }
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
-}
-
-.max-h-\[50vh\] {
-  max-height: 50vh;
 }
 
 .min-h-0 {
@@ -1150,16 +1130,16 @@ video {
   width: 14rem;
 }
 
+.w-60 {
+  width: 15rem;
+}
+
 .w-72 {
   width: 18rem;
 }
 
 .w-80 {
   width: 20rem;
-}
-
-.w-9 {
-  width: 2.25rem;
 }
 
 .w-\[10\%\] {
@@ -1243,16 +1223,12 @@ video {
   width: 100vw;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
 .min-w-0 {
   min-width: 0px;
+}
+
+.min-w-\[260px\] {
+  min-width: 260px;
 }
 
 .max-w-12 {
@@ -1351,16 +1327,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-0\.5 {
-  --tw-translate-x: 0.125rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[18px\] {
-  --tw-translate-x: 18px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .translate-x-full {
   --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1384,6 +1350,12 @@ video {
 .translate-y-px {
   --tw-translate-y: 1px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.\!scale-100 {
+  --tw-scale-x: 1 !important;
+  --tw-scale-y: 1 !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
 .transform {
@@ -1521,16 +1493,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.place-self-start {
-  place-self: start;
 }
 
 .\!place-self-center {
@@ -1840,11 +1802,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-vlp3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
-}
-
 .bg-vls2 {
   --tw-bg-opacity: 1;
   background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
@@ -2015,11 +1972,6 @@ video {
   padding-bottom: 0px;
 }
 
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -2038,11 +1990,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .\!pl-12 {
@@ -2223,6 +2170,10 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
+.text-red-500\/80 {
+  color: rgb(239 68 68 / 0.8);
+}
+
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity, 1));
@@ -2255,6 +2206,15 @@ video {
 .text-vla {
   --tw-text-opacity: 1;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
+}
+
+.text-vla2 {
+  --tw-text-opacity: 1;
+  color: rgb(75 168 95 / var(--tw-text-opacity, 1));
+}
+
+.text-vla2\/80 {
+  color: rgb(75 168 95 / 0.8);
 }
 
 .text-vlp {
@@ -2303,9 +2263,13 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-500 {
+.text-yellow-300 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+  color: rgb(253 224 71 / var(--tw-text-opacity, 1));
+}
+
+.text-yellow-400\/70 {
+  color: rgb(250 204 21 / 0.7);
 }
 
 .text-opacity-90 {
@@ -4350,11 +4314,6 @@ input[type='radio']:hover {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-vda:hover {
-  --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
-}
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -4539,6 +4498,11 @@ input[type='radio']:hover {
   border-color: rgb(82 82 82 / 0.7);
 }
 
+.dark\:border-vds3light:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-border-opacity, 1));
+}
+
 .dark\:border-vds3light\/50:is(.dark *) {
   border-color: rgb(163 163 163 / 0.5);
 }
@@ -4559,10 +4523,6 @@ input[type='radio']:hover {
 .dark\:border-vred-300:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-vls2\/40:is(.dark *) {
-  border-color: rgb(43 52 64 / 0.4);
 }
 
 .dark\:border-t-vds2:is(.dark *) {
@@ -4600,10 +4560,6 @@ input[type='radio']:hover {
   background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-vda2\/80:is(.dark *) {
-  background-color: rgb(254 127 118 / 0.8);
-}
-
 .dark\:bg-vdp:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
@@ -4626,11 +4582,6 @@ input[type='radio']:hover {
 .dark\:bg-vds2:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vds3light:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(163 163 163 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:bg-vds3neu700:is(.dark *) {
@@ -4676,6 +4627,11 @@ input[type='radio']:hover {
   color: rgb(163 163 163 / var(--tw-text-opacity, 1));
 }
 
+.dark\:text-vla2:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(75 168 95 / var(--tw-text-opacity, 1));
+}
+
 .dark\:text-vlp\/40:is(.dark *) {
   color: rgb(255 255 255 / 0.4);
 }
@@ -4695,9 +4651,8 @@ input[type='radio']:hover {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.dark\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+.dark\:text-yellow-400\/70:is(.dark *) {
+  color: rgb(250 204 21 / 0.7);
 }
 
 .dark\:underline:is(.dark *) {
@@ -4843,11 +4798,6 @@ input[type='radio']:hover {
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.dark\:hover\:text-gray-300:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
 .dark\:hover\:placeholder-vred-300:hover:is(.dark *)::-moz-placeholder {
