--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -713,6 +713,10 @@ video {
   top: 25%;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -795,8 +799,16 @@ video {
   margin-bottom: 1rem;
 }
 
+.-mb-0\.5 {
+  margin-bottom: -0.125rem;
+}
+
 .-ms-32 {
   margin-inline-start: -8rem;
+}
+
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 
 .-mt-\[7px\] {
@@ -909,14 +921,6 @@ video {
 
 .mt-auto {
   margin-top: auto;
-}
-
-.-mt-2 {
-  margin-top: -0.5rem;
-}
-
-.-mb-0\.5 {
-  margin-bottom: -0.125rem;
 }
 
 .block {
@@ -1042,6 +1046,10 @@ video {
   max-height: 100%;
 }
 
+.max-h-\[15vh\] {
+  max-height: 15vh;
+}
+
 .max-h-\[300px\] {
   max-height: 300px;
 }
@@ -1066,8 +1074,8 @@ video {
   max-height: calc(80vh - 200px);
 }
 
-.max-h-\[60vh\] {
-  max-height: 60vh;
+.max-h-\[18vh\] {
+  max-height: 18vh;
 }
 
 .min-h-0 {
@@ -1210,6 +1218,10 @@ video {
   width: 75%;
 }
 
+.w-\[94\%\] {
+  width: 94%;
+}
+
 .w-\[95\%\] {
   width: 95%;
 }
@@ -1237,18 +1249,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[99\%\] {
-  width: 99%;
-}
-
-.w-\[97\%\] {
-  width: 97%;
-}
-
-.w-\[98\%\] {
-  width: 98%;
 }
 
 .min-w-0 {
@@ -1380,6 +1380,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1401,6 +1406,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
 
 .select-none {
@@ -1435,10 +1444,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-col-reverse {
-  flex-direction: column-reverse;
 }
 
 .items-start {
@@ -1526,22 +1531,16 @@ video {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .\!place-self-center {
@@ -1650,11 +1649,6 @@ video {
   border-width: 0px;
 }
 
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
-
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1748,14 +1742,13 @@ video {
   border-color: rgb(43 52 64 / 0.2);
 }
 
-.border-yellow-400 {
+.border-vla2 {
   --tw-border-opacity: 1;
-  border-color: rgb(250 204 21 / var(--tw-border-opacity, 1));
+  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
 }
 
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+.border-vls2\/40 {
+  border-color: rgb(43 52 64 / 0.4);
 }
 
 .border-e-transparent {
@@ -1804,11 +1797,6 @@ video {
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-300 {
@@ -1874,11 +1862,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
 }
 
 .bg-vlp2 {
@@ -1986,6 +1969,10 @@ video {
   padding: 2rem;
 }
 
+.\!p-0 {
+  padding: 0px !important;
+}
+
 .\!px-2 {
   padding-left: 0.5rem !important;
   padding-right: 0.5rem !important;
@@ -2041,6 +2028,11 @@ video {
   padding-bottom: 0px;
 }
 
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -2059,11 +2051,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
 }
 
 .\!pl-12 {
@@ -2198,10 +2185,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .font-medium {
@@ -2350,6 +2333,26 @@ video {
   color: rgb(250 204 21 / 0.7);
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.\!text-gray-400 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1)) !important;
+}
+
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
 }
@@ -2388,6 +2391,10 @@ video {
   opacity: 0.35;
 }
 
+.opacity-80 {
+  opacity: 0.8;
+}
+
 .opacity-90 {
   opacity: 0.9;
 }
@@ -2396,8 +2403,8 @@ video {
   opacity: 0.95;
 }
 
-.opacity-80 {
-  opacity: 0.8;
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .shadow {
@@ -2515,10 +2522,6 @@ video {
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.duration-700 {
-  transition-duration: 700ms;
 }
 
 .ease-in {
@@ -4301,10 +4304,6 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.hover\:border-vls\/40:hover {
-  border-color: rgb(139 145 151 / 0.4);
-}
-
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
@@ -4358,6 +4357,15 @@ input[type='radio']:hover {
 .hover\:bg-vlp2:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-vlp\/80:hover {
+  background-color: rgb(255 255 255 / 0.8);
+}
+
+.hover\:bg-vlp3:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
@@ -4416,12 +4424,6 @@ input[type='radio']:hover {
 .hover\:placeholder-vla:hover::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(83 207 110 / var(--tw-placeholder-opacity, 1));
-}
-
-.hover\:shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:brightness-110:hover {
@@ -4546,10 +4548,6 @@ input[type='radio']:hover {
   border-width: 1px !important;
 }
 
-.dark\:border:is(.dark *) {
-  border-width: 1px;
-}
-
 .dark\:\!border-vds2:is(.dark *) {
   --tw-border-opacity: 1 !important;
   border-color: rgb(82 82 82 / var(--tw-border-opacity, 1)) !important;
@@ -4625,9 +4623,9 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:border-gray-700:is(.dark *) {
+.dark\:border-vda2:is(.dark *) {
   --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
 }
 
 .dark\:border-t-vds2:is(.dark *) {
@@ -4650,19 +4648,9 @@ input[type='radio']:hover {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1)) !important;
 }
 
-.dark\:bg-gray-700:is(.dark *) {
+.dark\:bg-\[\#27272A\]:is(.dark *) {
   --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-gray-800:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-gray-900:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:bg-neutral-500:is(.dark *) {
@@ -4714,34 +4702,8 @@ input[type='radio']:hover {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-red-500:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-red-300:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-blue-900:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-gray-400:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#27272A\]:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:text-gray-300:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+.dark\:font-normal:is(.dark *) {
+  font-weight: 400;
 }
 
 .dark\:text-neutral-400:is(.dark *) {
@@ -4896,11 +4858,6 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:hover\:bg-gray-700:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:hover\:bg-neutral-500:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(115 115 115 / var(--tw-bg-opacity, 1));
@@ -4919,11 +4876,6 @@ input[type='radio']:hover {
 .dark\:hover\:bg-vds2:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-vdp:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:fill-vred-300:hover:is(.dark *) {
